--- a/src/index.html
+++ b/src/index.html
@@ -236,7 +236,7 @@
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <div class="project">
-                            <img src="./image/key.png" alt="">
+                            <img src="./image/keyboard.jpg" alt="">
                             <div class="overlay">
                                <div>
                                     <h4 class="text-white">Project Title</h4>
@@ -247,7 +247,7 @@
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <div class="project">
-                            <img src="./image/image5.jpg" alt="">
+                            <img src="./image/keyboard.jpg" alt="">
                             <div class="overlay">
                                <div>
                                     <h4 class="text-white">Project Title</h4>
@@ -258,7 +258,7 @@
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <div class="project">
-                            <img src="./image/keyboard(3).jpg" alt="">
+                            <img src="./image/keyboard.jpg" alt="">
                             <div class="overlay">
                                <div>
                                     <h4 class="text-white">Project Title</h4>
@@ -269,7 +269,7 @@
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <div class="project">
-                            <img src="./image/keyboard1.jpg" alt="">
+                            <img src="./image/keyboard.jpg" alt="">
                             <div class="overlay">
                                <div>
                                     <h4 class="text-white">Project Title</h4>
@@ -280,7 +280,7 @@
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <div class="project">
-                            <img src="./image/keyboard5.png" alt="">
+                            <img src="./image/keyboard.jpg" alt="">
                             <div class="overlay">
                                <div>
                                     <h4 class="text-white">Project Title</h4>
